--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
     <section id="counts" class="counts" style="padding-top: 0;">
       <div class="container" data-aos="fade-up">
 
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="2" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="2" class="purecounter"></span>
                 <p>Happy Clients</p>
               </div>
             </div>
@@ -243,21 +243,21 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="2" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="2" class="purecounter"></span>
                 <p>Projects</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-              <i class="bi bi-headset" style="color: #15be56;"></i>
-              <div>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="2" class="purecounter"></span>
-                <p>Hours Of Support</p>
-              </div>
-            </div>
-          </div>
+<!--          <div class="col-lg-3 col-md-6">-->
+<!--            <div class="count-box">-->
+<!--              <i class="bi bi-headset" style="color: #15be56;"></i>-->
+<!--              <div>-->
+<!--                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="2" class="purecounter"></span>-->
+<!--                <p>Hours Of Support</p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
@@ -287,28 +287,70 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Website</li>
-              <li data-filter=".filter-instagram">Instagram Feed</li>
-              <li data-filter=".filter-photo">Product Photography</li>
-              <li data-filter=".filter-video-ads">Video Advertisement</li>
-              <li data-filter=".filter-brochures">Brochures</li>
-              <li data-filter=".filter-jingle">Jingle</li>
+              <li data-filter="*" class="filter-active">All (5)</li>
+              <li data-filter=".filter-web">Website (1)</li>
+              <li data-filter=".filter-instagram">Instagram Feed (2)</li>
+              <li data-filter=".filter-photo">Product Photography (1)</li>
+<!--              <li data-filter=".filter-video-ads">Video Advertisement</li>-->
+              <li data-filter=".filter-brochures">Brochures (1)</li>
+<!--              <li data-filter=".filter-jingle">Jingle</li>-->
             </ul>
           </div>
         </div>
 
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-photo">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="portfolio/snn_coffee/snn_photoprod_box.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>SNN Coffee Photography</h4>
+                <p>Product Photography</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a>
+<!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-brochures">
+            <div class="portfolio-wrap">
+              <img src="portfolio/t-ren_brochure/tses_brochures_box.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>T-Ren Menu Brochure</h4>
+                <p>Brochure</p>
+                <div class="portfolio-links">
+                  <a href="portfolio/t-ren_brochure/tses_brochures1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="T-Ren Menu Brochure"><i class="bi bi-zoom-in"></i></a>
+                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-instagram">
+            <div class="portfolio-wrap">
+              <img src="portfolio/t-ren_instagram/tses_ig_box.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>T-Ren Instagram Feed</h4>
+                <p>Instagram Feed</p>
+                <div class="portfolio-links">
+                  <a href="portfolio/t-ren_instagram/tses_ig1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="T-Ren Instagram Feed"><i class="bi bi-zoom-in"></i></a>
+                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-instagram">
+            <div class="portfolio-wrap">
+              <img src="portfolio/zonadokter_instagram/zd_ig_box.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ZonaDokter Instagram Feed</h4>
+                <p>Instagram Feed</p>
+                <div class="portfolio-links">
+                  <a href="portfolio/zonadokter_instagram/zd_ig2.jpeg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="ZonaDokter Instagram Feed"><i class="bi bi-zoom-in"></i></a>
+                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
@@ -316,111 +358,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="portfolio/shunda_plafon_web/shundaplafon1_box.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Shunda Plafon Web</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="portfolio/shunda_plafon_web/shundaplafon1.PNG" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Shunda Plafon Web"><i class="bi bi-zoom-in"></i></a>
+                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
                 </div>
               </div>
             </div>
