--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
 
           <div class="col-lg-6">
             <iframe
-                    width="600"
-                    height="450"
+                    width="100%"
+                    height="100%"
                     style="border:0"
                     loading="lazy"
                     allowfullscreen
