--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="Old%20Web/images/favicon.png" rel="icon">
+  <link href="Old%20Web/images/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -53,7 +53,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="Old%20Web/images/logo.jpeg" alt="">
+        <img src="Old%20Web/images/logo_round.png" alt="">
         <span>ZonaSpace</span>
       </a>
 
@@ -426,6 +426,42 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/Madya.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/madya121"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.linkedin.com/in/vincentius-madya/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>VINCENTIUS MADYA</h4>
+                <span>Master of None</span>
+                <p>Ex Amazon and Grab. With more than 5 years Software Engineer experience, working on national and international company. Ready to deliver the best product.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="member">
+              <div class="member-img">
+                <img src="Old%20Web/images/logo.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>ADNAN QURAIS</h4>
+                <span>Code Wizard</span>
+                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -535,15 +571,15 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="Old%20Web/images/logo.jpeg" alt="">
+              <img src="Old%20Web/images/logo_round.png" alt="">
               <span>ZonaSpace</span>
             </a>
             <p>In zonaspace, we can help you realise your idea and help you build your business</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://twitter.com/zonaspaceid" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.youtube.com/channel/UCdVlXQRYgHcz9YZM2ABaC4A" class="youtube"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/zonaspace.id/" class="instagram"><i class="bi bi-instagram"></i></a>
+<!--              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>-->
             </div>
           </div>
 
