--- a/index.html
+++ b/index.html
@@ -391,18 +391,16 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="Old%20Web/images/logo.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/team/Adi.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/adi-pradana-yuda-purnomo-68b55b72"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>ADI PRADANA</h4>
                 <span>Code Composer</span>
-                <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
+                <p>An technopreneur enthusiast who has B2B and B2C experience, ready to helped define your business into digital.
+                  He defining people and culture strategies for a range of product needs.</p>
               </div>
             </div>
           </div>
@@ -446,18 +444,15 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="Old%20Web/images/logo.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/team/Adnan.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/adnan-qurais-63a97593/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>ADNAN QURAIS</h4>
                 <span>Code Wizard</span>
-                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                <p>Code is just code. What will it becomes in our lives is depend on what purpose we use it for. It can bring a meaningful life or destruction in our life. Be kind be better.</p>
               </div>
             </div>
           </div>
