--- a/index.html
+++ b/index.html
@@ -408,18 +408,12 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
-                <img src="Old%20Web/images/logo.jpeg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                <img src="assets/img/team/Alfrey.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>ALFREYDIO REFIN</h4>
                 <span>Creative Director</span>
-                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                <p>A digital artist — primarily focusing on creating graphic designs, UI/UX designs, illustrations and musical compositions.</p>
               </div>
             </div>
           </div>
