Add more portfolios

--- a/index.html
+++ b/index.html
@@ -139,53 +139,75 @@
           <p>The Things That We Do</p>
         </header>
 
-        <div class="owl-carousel">
+        <div class="owl-carousel owl-theme">
 
           <div class="item">
             <div class="box">
-              <i style="font-size: 75px;" class="ion-speakerphone"></i>
-              <h3>ADVERTISEMENT</h3>
-              <p>Let's make the people can hear and see your business with remarkable video. It will be awesome, dude!</p>
+              <i style="font-size: 75px;" class="ion-android-cart"></i>
+              <h3>LapakSist!</h3>
+              <p>You can set up your shop via your mobile phone, and your customers will buy your products via web, mobile and PC!</p>
+            </div>
+
+            <div class="box">
+              <i style="font-size: 75px;" class="ion-android-folder-open"></i>
+              <h3>LERP</h3>
+              <p>Get the stock status of the items you sell in real time, actual and precise. The movement of goods supported by a cash flow statement can facilitate your business decision making!</p>
             </div>
           </div>
 
           <div class="item">
             <div class="box">
-              <i style="font-size: 75px;" class="ion-ios-musical-notes"></i>
-              <h3>BACKGROUND MUSIC</h3>
-              <p>Close your eyes when you watching television, you can guess the ads! Music help your business will be easy to identify.</p>
+              <i style="font-size: 75px;" class="ion-monitor"></i>
+              <h3>Advertisement</h3>
+              <p>Do you want more people to see and buy your prod- ucts and services? We can help you with awesome videos, catalogs and brochures!</p>
+            </div>
+
+            <div class="box">
+              <i style="font-size: 75px;" class="ion-speakerphone"></i>
+              <h3>Branding</h3>
+              <p>A good branding can help your customers recognize your business more easily! We can help your social media to look attractive with the characteristics that make your brand accessible!</p>
             </div>
           </div>
 
           <div class="item">
             <div class="box">
               <i style="font-size: 75px;" class="ion-earth"></i>
-              <h3>WEBSITE</h3>
-              <p>Digital Marketing is the successful key at this 4.0 industry era. Internet everywhere! All of earth society can buy your product.</p>
+              <h3>Landing Page</h3>
+              <p>With the internet in our daily lives, digital marketing is the key to the success of industry 4.0! By having your own landing page, people all over the world can find and buy your products!</p>
+            </div>
+
+            <div class="box">
+              <i style="font-size: 75px;" class="ion-android-restaurant"></i>
+              <h3>ZonaMenu</h3>
+              <p>Tap or swipe your screen to get the menu you want! The chef is waiting for you and ready to cook the menu you have chosen. Wait a few moments, and your order will be delivered to your table right away!</p>
             </div>
           </div>
 
           <div class="item">
             <div class="box">
-              <i style="font-size: 75px;" class="ion-android-bulb"></i>
-              <h3>BRANDING</h3>
-              <p>Do you want to sell your cute clothes? Don't worry, give your instagram and let's make it different with another clothes with social media feeds and cool graphic design. </p>
+              <i style="font-size: 75px;" class="ion-cube"></i>
+              <h3>SimpanData</h3>
+              <p>File sharing doesn’t always have to be with paper and folders. With E-Filing, you can share it immediately and ask your co-workers to immediately reply to your document. You can even set file access as you wish!</p>
+            </div>
+
+            <div class="box">
+              <i style="font-size: 75px;" class="ion-android-people"></i>
+              <h3>ZonaTicket</h3>
+              <p>Find more problems by taking pictures through your phone and sending them to the data center! The admin will move quickly to assign a crew to quickly solve your problem. Fast, precise and easy.</p>
             </div>
           </div>
 
           <div class="item">
             <div class="box">
-              <i style="font-size: 75px;" class="ion-ios-cart"></i>
-              <h3>ZONA E-COMMERCE</h3>
-              <p>Let's build the mini market. Uhmm.. virtual mini market. You can control your mini market from out of your home with mobile application. The customer can buy anything from mobile and web application. It's miracle!</p>
+              <i style="font-size: 75px;" class="ion-ios-bookmarks"></i>
+              <h3>Rekap</h3>
+              <p>Get a flexible and fast financial system for you. You can recap invoices, create automatic billing letters, and check for each latest bill!</p>
             </div>
-          </div>
 
-          <div class="item">
             <div class="box">
-              <i style="font-size: 75px;" class="ion-ios-book"></i>
-              <h3>ZONA E-LEARNING</h3>
-              <p>I want tell you something. Study from Home can be enjoy! Enjoy! You can put your assignment to cloud and the teacher can check the exam just use mobile phone. It will be simple!</p>
+              <i style="font-size: 75px;" class="ion-university"></i>
+              <h3>Simak</h3>
+              <p>Studying from home hasn’t always exactly been easy, but now students can submit assignments and exams via the cloud, and teachers can check their submis- sions on their phones!</p>
             </div>
           </div>
 
@@ -288,7 +310,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All (5)</li>
-              <li data-filter=".filter-web">Website (1)</li>
+              <li data-filter=".filter-web">Website (2)</li>
               <li data-filter=".filter-instagram">Instagram Feed (2)</li>
               <li data-filter=".filter-photo">Product Photography (1)</li>
 <!--              <li data-filter=".filter-video-ads">Video Advertisement</li>-->
@@ -299,6 +321,20 @@
         </div>
 
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="portfolio/snn_coffee/snn_photoprod_box.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Simak (E-Learning) for Yayasan Granada</h4>
+                <p>Website</p>
+                <div class="portfolio-links">
+                  <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Simak Yayasan Granada"><i class="bi bi-zoom-in"></i></a>
+                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-photo">
             <div class="portfolio-wrap">
@@ -361,7 +397,7 @@
               <img src="portfolio/shunda_plafon_web/shundaplafon1_box.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Shunda Plafon Web</h4>
-                <p>Web</p>
+                <p>Website</p>
                 <div class="portfolio-links">
                   <a href="portfolio/shunda_plafon_web/shundaplafon1.PNG" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Shunda Plafon Web"><i class="bi bi-zoom-in"></i></a>
                   <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
