--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Madya.jpg" class="img-fluid" alt="">
@@ -433,7 +433,7 @@
                 <p>Ex Amazon and Grab. With more than 5 years Software Engineer experience, working on national and international company. Ready to deliver the best product.</p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
