--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="2" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="2" class="purecounter"></span>
                 <p>Projects</p>
               </div>
             </div>
@@ -287,18 +287,61 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All (5)</li>
-              <li data-filter=".filter-web">Website (1)</li>
-              <li data-filter=".filter-instagram">Instagram Feed (2)</li>
+              <li data-filter="*" class="filter-active">All (4)</li>
+              <li data-filter=".filter-web">Website (3)</li>
+              <!-- <li data-filter=".filter-instagram">Instagram Feed (2)</li> -->
               <li data-filter=".filter-photo">Product Photography (1)</li>
-<!--              <li data-filter=".filter-video-ads">Video Advertisement</li>-->
-              <li data-filter=".filter-brochures">Brochures (1)</li>
-<!--              <li data-filter=".filter-jingle">Jingle</li>-->
+              <!-- <li data-filter=".filter-video-ads">Video Advertisement</li> -->
+              <!-- <li data-filter=".filter-brochures">Brochures (1)</li> -->
+              <!-- <li data-filter=".filter-jingle">Jingle</li> -->
             </ul>
           </div>
         </div>
 
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="portfolio/e-learning/zonalearning.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>E-Learning Solution</h4>
+                <p>Recently deployed in Granada Islamic School as a school management system</p>
+                <!-- <div class="portfolio-links">
+                  <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="portfolio/temasa/temasa.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Temasa</h4>
+                <p>Digitize your restaurant</p>
+                <div class="portfolio-links">
+                  <!-- <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a> -->
+                  <a target="_blank" href="https://temasa.zonaspace.id/" title="More Details"><i class="bi bi-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="portfolio/ecococo/ecococo.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Ecococo</h4>
+                <p>A company profile for <br/> charcoal briquette producer</p>
+                <div class="portfolio-links">
+                  <!-- <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a> -->
+                  <a target="_blank" href="https://ecococo.id/" title="More Details"><i class="bi bi-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-photo">
             <div class="portfolio-wrap">
@@ -308,13 +351,13 @@
                 <p>Product Photography</p>
                 <div class="portfolio-links">
                   <a href="portfolio/snn_coffee/snn_photoprod1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="SNN Coffee Photography"><i class="bi bi-zoom-in"></i></a>
-<!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a> -->
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-brochures">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-brochures">
             <div class="portfolio-wrap">
               <img src="portfolio/t-ren_brochure/tses_brochures_box.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -322,7 +365,7 @@
                 <p>Brochure</p>
                 <div class="portfolio-links">
                   <a href="portfolio/t-ren_brochure/tses_brochures1.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="T-Ren Menu Brochure"><i class="bi bi-zoom-in"></i></a>
-                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -336,7 +379,7 @@
                 <p>Instagram Feed</p>
                 <div class="portfolio-links">
                   <a href="portfolio/t-ren_instagram/tses_ig1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="T-Ren Instagram Feed"><i class="bi bi-zoom-in"></i></a>
-                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -350,7 +393,7 @@
                 <p>Instagram Feed</p>
                 <div class="portfolio-links">
                   <a href="portfolio/zonadokter_instagram/zd_ig2.jpeg" data-gallery="portfolioGallery" class="portfokio-lightbox" title="ZonaDokter Instagram Feed"><i class="bi bi-zoom-in"></i></a>
-                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -364,11 +407,11 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="portfolio/shunda_plafon_web/shundaplafon1.PNG" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Shunda Plafon Web"><i class="bi bi-zoom-in"></i></a>
-                  <!--                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>-->
+                  <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -418,7 +461,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/Madya.jpg" class="img-fluid" alt="">
@@ -430,10 +473,10 @@
               <div class="member-info">
                 <h4>VINCENTIUS MADYA</h4>
                 <span>Master of None</span>
-                <p>Ex Amazon and Grab. With more than 5 years Software Engineer experience, working on national and international company. Ready to deliver the best product.</p>
+                <p>More than 5 years Software Engineer experience, working on national and international company. Ready to deliver the best product.</p>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
